<resources>
    <string name="app_name" translatable="false">DashboardActivity</string>

    <string name="shake_activity_name">Quotation Shake</string>
    <string name="random_activity_name">Random Quotations</string>
    <string name="favs_activity_name">Favourite Quotations</string>
    <string name="settings_activity_name">Settings</string>
    <string name="about_activity_name">About</string>

    <string name="dboard_label_b1">Get quotations</string>
    <string name="dboard_label_b2">Favourite quotations</string>
    <string name="dboard_label_b3">Settings</string>
    <string name="dboard_label_b4">About</string>

    <string name="about_label_credits">Quotation Shake by \npabferir\n2020</string>

    <string name="settings_label_tv1">User name</string>
    <string name="settings_label_et1">Insert your name...</string>
    <string name="settings_label_tv2">Quotations language</string>
    <string name="settings_label_tv3">HTTP method</string>
    <string name="settings_label_rd1" translatable="false">GET</string>
    <string name="settings_label_rd2" translatable="false">POST</string>
    <string name="user_defaultName">Nameless One</string>

    <string name="favs_label_b1">Author info</string>
    <string name="favs_dialog_title">Remove Quotation</string>
    <string name="favs_dialog_message">Are you sure you want to remove this quotation from your favourites list?</string>

    <string name="quotes_label_tv1">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotes_label_sampleQuote">This is a sample quotation</string>
    <string name="quotes_label_sampleAuthor">This is a sample author</string>

    <string name="menu_item_add">Add</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_delete_all">Clear All</string>

    <string name="menu_item_delete_all_dialog_title">Remove All Quotations</string>
    <string name="menu_item_delete_all_dialog_message">Are you sure that you want to delete ALL your favourite quotations?</string>
</resources>
